--- a/src/style/main.css
+++ b/src/style/main.css
@@ -24,26 +24,30 @@ a {
 
 /*######################    mainPage      ##################*/
 
-.conteiner {
-  width: 100%;
-  padding: 50px;
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
+/*.conteiner {*/
+  /*width: 100%;*/
+  /*padding: 50px 0;*/
+  /*display: flex;*/
+  /*flex-direction: row;*/
+  /*justify-content: center;*/
+/*}*/
+.mdl-layout__drawer {
+  border: none;
+  background-color: #142550;
+}
+.mdl-layout__drawer .mdl-navigation {
+  padding: 0;
 }
 .infoBox {
-  width: 10%;
-  background-color: #142550;
-  padding: 20px;
-  box-shadow: 0 2px 10px rgba(0, 0, 0, .3);
+  padding: 0 10px;
 }
 .userInfo {
   color: #fff;
-  margin-bottom: 50px;
 }
 .contacts,
 .channels {
   color: #bab4d4;
+  padding-bottom: 16px;
 }
 .myCross {
   /*ЗДЕСЬ НАДО НАПИСАТЬ СВОЙСТВА КНОПКИ, НА УДАЛЕНИЕ КАНАЛА*/
@@ -69,10 +73,17 @@ a {
   box-shadow: 4px 4px 10px rgba(0, 0, 0, .3);
 }
 .name {
-  padding: 0 40px 20px 40px;
   font-weight: bold;
 }
-
+.msg {
+  padding: 0 60px;
+}
+.myMsgImg {
+  float: right;
+}
+.opponentMsgImg {
+  float: left;
+}
 .opponentMsg {
   padding: 15px 0 15px 0;
   text-align: left;
@@ -91,4 +102,21 @@ a {
 }
 .myMdl-textfield {
   width: 100%;
+}
+
+.demo-layout-transparent .mdl-layout__header,
+.demo-layout-transparent .mdl-layout__drawer-button {
+  /* This background is dark, so we set text to white. Use 87% black instead if
+     your background is light. */
+  color: #000750;
+}
+
+@media all and (max-width: 700px){
+  .chat {
+    width: 100%;
+    padding: 0;
+  }
+  .control {
+    padding-left: 50px;
+  }
 }
