func add new channels and fix

--- a/src/style/main.css
+++ b/src/style/main.css
@@ -31,6 +31,10 @@ a {
   /*flex-direction: row;*/
   /*justify-content: center;*/
 /*}*/
+.material-icons {
+  font-size: 18px;
+  cursor: pointer;
+}
 .mdl-layout__drawer {
   border: none;
   background-color: #142550;
