--- a/src/style/main.css
+++ b/src/style/main.css
@@ -94,6 +94,7 @@ a {
 }
 
 .chat {
+    margin: 0 auto;
     padding-left: 50px;
     padding-right: 50px;
     width: 35%;
@@ -157,6 +158,21 @@ a {
     overflow-y: scroll;
 }
 
+#dialogForSetMap {
+    width: 50%;
+    height: 60%;
+}
+.myCssForMap {
+    margin: 0 auto;
+    padding: 0 !important;
+    width: calc(100% - 48px);
+    height: calc(100% - 92px);
+}
+div#map {
+    width: 100%;
+    height: 100%;
+}
+
 .mdl-dialog {
     border: none;
     box-shadow: 0 9px 46px 8px rgba(0, 0, 0, 0.14), 0 11px 15px -7px rgba(0, 0, 0, 0.12), 0 24px 38px 3px rgba(0, 0, 0, 0.2);
@@ -164,7 +180,7 @@ a {
 }
 
 .mdl-dialog__title {
-    padding: 24px 24px 0;
+    padding: 0 24px 0;
     margin: 0;
     font-size: 1.5rem;
 }
